<resources>
    <string name="app_name">KanjiStudyPractice</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="database">Database</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="go_to_kanji_list">Go to Kanji List</string>
    <string name="first_name">First name :</string>
    <string name="last_name">Last name :</string>
    <string name="age">Age :</string>
    <string name="meaning">Meaning :</string>
    <string name="jlpt_level">JLPT Level : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username2">Username :</string>
    <string name="email2">Email :</string>
    <string name="account_created">Account Created :</string>
    <string name="date_of_birth">25/06/2003</string>
    <string name="main_meaning">Main meaning :</string>
    <string name="defaultCharacter">雨</string>
    <string name="defaultMeaning">Rain</string>
    <string name="other_meanings">Other Meanings :</string>
    <string name="kanji_option_default">Kanji Option</string>
    <string name="default_size">000</string>
    <string name="size">Size:</string>
</resources>