<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_margin="8dp"
    android:tag="jlpt_choices">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultCharacter"
            android:textSize="100sp"
            android:layout_centerHorizontal="true"/>

        <!-- Customizable attributes -->
        <TextView
            android:id="@+id/jlptLabel"
            android:layout_below="@+id/character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="JLPT 1"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/jlptLabel">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"/>

            <TextView
                android:id="@+id/jlptSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_size" />

        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>