<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KanjiInfo">

    <LinearLayout
        android:id="@+id/mainCharacterLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/kanjiCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultCharacter"
            android:textSize="150sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainMeaningLayout"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mainCharacterLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_meaning"
            android:textSize="25sp"/>


        <TextView
            android:id="@+id/mainMeaning"
            android:layout_marginHorizontal="10dp"
            android:padding="5dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultMeaning"
            android:textSize="25sp"
            android:background="@drawable/rectangle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/otherMeaningLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainMeaningLayout"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:baselineAligned="true">

        <TextView
            android:id="@+id/otherMeaningTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_meanings"
            android:textSize="25sp" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/otherMeaningLayoutToAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexWrap="wrap"
            app:alignItems="center"
            app:justifyContent="center">



        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otherMeaningLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jlpt_level"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/jlptLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/rectangle"
            android:padding="5dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="25sp" />

    </LinearLayout>


</RelativeLayout>