<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/topTools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="end"
            android:background="@color/design_default_color_primary_dark">


            <ImageButton
                android:id="@+id/settingsBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/settings_3110"
                android:background="@android:color/transparent"
                android:contentDescription="ImageButton"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/imageLayout"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/topTools">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_profile"
                android:scaleType="centerCrop"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginHorizontal="10dp"
            android:id="@+id/usernameLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageLayout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username2"
                    android:textSize="25sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/username"
                android:textSize="25sp"
                android:gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginHorizontal="10dp"
            android:id="@+id/emailLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameLayout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email2"
                    android:textSize="25sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/email"
                android:textSize="25sp"
                android:gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginHorizontal="10dp"
            android:id="@+id/dateLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailLayout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_created"
                    android:textSize="25sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/dateCreation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/date_of_birth"
                android:textSize="25sp"
                android:gravity="right"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>